[package]
name = "alpu_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
dotenv = "0.15.0"
serde_json = "1.0"
stopwatch = "0.0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
