[package]
name = "alpu_rust"
version = "0.1.0"
edition = "2021"
include = ["/src", "/.env"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers = "2.0.7"
ethers = { version = "2.0.7", features = ["legacy"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3.28"
url = "2.4.0"
websocket-lite = "0.5.2"
futures-util = "0.3.28"
base64 = "0.21.2"
